--- a/src/index.css
+++ b/src/index.css
@@ -131,9 +131,15 @@ nav > ul > li:hover{
   font-family: 'Mulish', sans-serif;
   color:rgb(225, 165, 206);
 }
-.soundslip-container{
+.soundslip-container-user{
   display: flex;
   flex-direction: column;
+  justify-content: left;
+  line-height: 0.8em;
+}
+.soundslip-container{
+  display: flex;
+  flex-direction: row;
   justify-content: left;
   line-height: 0.8em;
 }
@@ -149,6 +155,10 @@ nav > ul > li:hover{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.soundslip-container-user:hover{
+  background-color: #4F7C83;
+  color: #C2CECA;
 }
 .soundslip-container:hover{
   background-color: #4F7C83;
@@ -166,7 +176,7 @@ nav > ul > li:hover{
   font-size: 2rem;
 }
 section.slip-panel > div + div{
-  width: 100%;
+  width: 80%;
 }
 .soundslip-topline{
   width: 100%;
