--- a/src/index.css
+++ b/src/index.css
@@ -5,69 +5,105 @@
   --primary: #1aac83;
   --error: #e7195a;
 }
+html{
+  height: 100%;
+}
 body {
-  background: #415D91;
+  background: #30343F;
   margin: 0;
+  height: 100%;
 }
-header a {
-  color: rgb(225, 165, 206);
-  text-decoration: none;
+.App{
+  width: 100%;
+  height: 100%;
 }
-.cl-userButtonAvatarBox{
-  width: 3rem;
-  height: 3rem;
-}
-.navbar > nav{
-  background-color: #696C95;
-  font-family: 'Questrial', sans-serif;
-  font-weight: 600;
-  font-size: 1.2em;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.navbar > nav > a{
-  margin-left: 2rem;
-  margin-top: 1rem;
-  padding: 0.8rem 1rem;
-  height: 1.6rem;
-  border: solid #696C95 1px;
-}
-.navbar > nav > a:hover{
-  background-color:rgba(225, 165, 206, 0.1);
-  border: solid rgb(225, 165, 206) 1px;
-}
-.navbar > nav > ul{
-  display: flex;
-  margin-right: 1em;
-  flex-direction: row;
-  list-style-type:none;
-}
-nav > ul > li{
-  margin-right: 30px;
-  padding: 0.8rem 0.6rem;
-  border: solid #696C95 1px;
-}
-nav > ul > li:hover{
-  background-color:rgba(225, 165, 206, 0.1);
-  border: solid rgb(225, 165, 206) 1px;
+.navbar{
+  height: 10vh;
 }
 .pages{
   width: 100%;
+  height: 90vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 .library{
-  font-family: 'Mulish', sans-serif;
-  width: 100%;
   display: flex;
   flex-direction: row;
-}
-.searchbar-container{
-  width: 30%;
+  width: 100%;
   height: 90vh;
-  padding: 1.5rem;
-  background-color: #6995C7;
+  font-family: 'Silkscreen', cursive;
+}
+.home{
+  height: 90vh;
+}
+.upload{
+  height: 90vh;
+}
+
+/* Components */
+
+/* NAVBAR */
+header a {
+  color: #c6c5b6;
+  text-decoration: none;
+}
+.navbar > nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 10vh;
+  background-color:#2a2e3a;
+  font-family: 'Silkscreen', cursive;
+  font-weight: 400;
+  font-size: 1.2em;
+}
+.navbar > nav > a{
+  margin: 2vh 2vh;
+  width: 10%;
+  height: 4.5vh;
+  padding: 0.5em 0.5em 0em 2.5em;
+  border: solid #2a2e3a 2px;
+}
+.navbar > nav > a:hover{
+  background-color:#30343F;
+  border: solid #c6c5b6 2px;
+}
+.navbar > nav > ul{
+  display: flex;
+  flex-direction: row;
+  list-style-type:none;
+  justify-content: space-between;
+  width: 40%;
+  height: 5vh;
+  margin: 2vh 2vh 0 0;
+  border: solid #2a2e3a 1px; 
+}
+nav > ul > li{
+  /* padding: 1vh 3vh; */
+  margin: 0;
+  border: solid #2a2e3a 1px;
+}
+nav > ul > li > a{
+  display: block;
+  vertical-align: middle;
+  padding: 1vh 2vh;
+  height: 70%;
+  border: solid #2a2e3a 2px;
+}
+nav > ul > li > a:hover{
+  background-color:#30343F;
+  border: solid #c6c5b6 2px;
+}
+
+/* LIBRARY */
+
+/* LIB - SEARCH PANEL */
+.searchbar-container{
+  width: 30vw;
+  padding: 1.5em;
+  background-color: #22252d;
 }
 .search-form{
   display: flex;
@@ -77,111 +113,166 @@ nav > ul > li:hover{
 .search-form > label{
   display: block;
   text-align: center;
-  height: 3rem;
-  font-size: 1.5rem;
-  color:rgb(225, 165, 206);
+  height: 3em;
+  font-size: 1.5em;
+  color:#c6c5b6;
 }
 .search-input{
   width: 80%;
-  background-color: rgb(225, 165, 206);
-  border: solid rgb(225, 165, 206) 2px;
-  height: 2rem;
+  background-color: #30343F;
+  border: solid #30343F 2px;
+  height: 2em;
   border-radius: 5px;
   display: block;
+  color:#c6c5b6;
+  font-family: 'Silkscreen', sans-serif;
+}
+.search-input:hover{
+  border: solid #c6c5b6 2px;
 }
 .search-button{
-  background-color: rgb(225, 165, 206);
+  background-color:#555862;
   border: none;
   border-radius: 5px;
-  margin-top: 1rem;
-  padding-top: 0.8rem;
-  width: 6rem;
-  height: 2rem;
-  color: #696C95;
-  font-family: 'Questrial', sans-serif;
-  font-size: 1.2rem;
+  margin-top: 1em;
+  padding-top: 0.6em;
+  width: 6em;
+  height: 2em;
+  color: #c6c5b6;
+  font-family: 'Silkscreen', cursive;
+  font-size: 1.5em;
   text-align: center;
+}
+.search-button:hover{
+  background-color: #7b7e87;
 }
 .search-button:active{
   background-color: #6995C7;
 }
-.slip-cell-container{
-  width: 70%;
+.search-type{
+  color: #c6c5b6;
+  font-size: 1.5em;
 }
-.download{
-  width: 10%;
-  margin-top: 5%;
-  height: 3rem;
+
+/* LIB - SEARCH RESULTS CONTAINER */
+.lib-slip-container{
+  width: 100%;
+  height: 100%;
 }
-.download i{
+.lib-slip-cell{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  width: 98.5%;
+  height: 20vh;
+  line-height: 1em;
+  padding-left: 1em;
+  color:#c6c5b6;
+  border-bottom: solid #c6c5b6 1px;
+}
+.lib-slip-cell:hover{
+  background-color:#555862;
+  border-bottom: solid white 1px;
+}
+.lib-slip-cell-data{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  padding-left: 2%;
+}
+.lib-slip-links-cont{
+  width: 8%;
+  height: 100%;
+}
+.lib-slip-belongs{
+  font-size: 0.8em;
+  margin: -1em 0 0 0.4em;
+  color:#c6c5b6;
+}
+.lib-slip-title{
+  font-size: 1.4em;
+  font-family: 'Silkscreen', cursive;
+}
+.lib-slip-desc{
+  font-family: 'Silkscreen', cursive;
+  color: #9f9e92;
+  font-size: 1.2em;
+  margin: 0.4em 0 0 1em;
+  width: 100%;
+  min-height: 40%;
+  line-height: 1.2em;
+}
+.lib-slip-date{
+  font-size: 0.8em;
+}
+.lib-player-container{
+  width: 40%;
+  height: 30%;
+  margin-top: 1em;
+  padding: 1em;
+}
+.lib-player-container i{
+  font-size: 2.5rem;
+}
+.lib-download{
+  display: block;
+  width: 60%;
+  padding-left: 20%;
+}
+.lib-download i{
+  color: #37436e;
   font-size: 2rem;
 }
+.lib-download i:hover{
+  color: #c6c5b6; 
+}
+
+/* USER PROFILE */
+
+/* user profile soundslips */
 .all-user-soundslips{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 90vh;
-  overflow: scroll;
-}
-.all-user-soundslips > section{
-  width: 40vw;
+  width: 100%;
 }
 .public-soundslips{
-  width: 100%;
-  font-family: 'Mulish', sans-serif;
-  color:rgb(225, 165, 206);
+  font-family: 'Silkscreen', cursive;
+  color:#c6c5b6;
 }
 .private-soundslips{
-  width: 100%;
-  font-family: 'Mulish', sans-serif;
-  color:rgb(225, 165, 206);
+  font-family: 'Silkscreen', cursive;
+  color:#aaa88e;
 }
+.user-slip-cell-cont{
+  height: 81vh;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+/* user profile main container */
 .soundslip-container-user{
   display: flex;
   flex-direction: column;
   justify-content: left;
   line-height: 0.8em;
-}
-.soundslip-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  line-height: 0.8em;
-}
-.lib-player-container{
-  width: 10%;
-  padding: 1rem;
-}
-.lib-player-container i{
-  font-size: 2.5rem;
-}
-.pub-results{
-  width: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  border-radius: 3px;
 }
 .soundslip-container-user:hover{
-  background-color: #4F7C83;
-  color: #C2CECA;
+  background-color: #3e4048;
 }
-.soundslip-container:hover{
-  background-color: #4F7C83;
-  color: #C2CECA;
+.all-user-soundslips > section{
+  width: 45vw;
 }
-.player-section{
-  padding: 0.6rem 0;
-  width: 3rem;
-  margin: 0 1.2rem;
+.slip-panel{
+  display: flex;
+  flex-direction: row;
 }
-.fa-pause{
-  font-size: 2rem;
-}
-.fa-play{
-  font-size: 2rem;
-}
-section.slip-panel > div + div{
-  width: 80%;
+.slip-panel > div + div{
+  width: 90%;
 }
 .soundslip-topline{
   width: 100%;
@@ -189,24 +280,60 @@ section.slip-panel > div + div{
   flex-direction: row;
   justify-content: space-between;
 }
+.soundslip-topline > .soundslip-title{
+  font-size: 1.3em;
+}
+.user-slip-details > .soundslip-desc{
+  margin-top: 0;
+  padding: 0 0.4em;
+  font-size: 1em;
+  line-height: 1em;
+  color:#7b7966
+}
+.user-slip-details > .soundslip-date{
+  font-size: 0.8em;
+}
 .soundslip-topline i{
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 .soundslip-actions{
-  width: 35%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  width: 8%;
 }
 .soundslip-actions > *{
-  padding: 0.8rem;
+  padding: 0.9rem 0.5em;
   margin: 0;
 }
-.slip-panel{
-  display: flex;
-  flex-direction: row;
-  padding: 10px;
+.user-player-section{
+  width: 10%;
+}
+.user-audio-player{
+  height: 50%;
+}
+.user-audio-player > span > i{
+  font-size: 2.2em;
+  padding: 0.5em;
+}
+.user-player-section > a{
+  display: none;
+}
+.user-player-section > a.user-download{
+  display: block;
   width: 100%;
+  height: 50%;
+}
+.user-player-section > a.user-download > i{
+  font-size: 2em;
+  margin: 0.4em 0.5em;
+  color: #37436e;
+}
+.user-player-section > a.user-download > i:hover{
+  color: #cbbfae;
+}
+.edit-container{
+  background-color: #2c2e37;
 }
 .edit-form{
   display: flex;
@@ -215,58 +342,121 @@ section.slip-panel > div + div{
   align-items: center;
 }
 .edit-form > *{
-  width: 70%;
+  width: 90%;
 }
-.soundslip-container{
-  color:rgb(225, 165, 206);
-}
-.soundslip-container > section.slip-panel > div + div > button{
-  height: 30%;
-}
-.soundslip-container > section.slip-panel > div + div > button:hover{
+.edit-form > label > input, textarea{
+  display: block;
+  margin: 0.5em;
+  width: 100%;
+  height: 5vh;
+  padding: 0.2em 0.5em;
+  border-radius: 4px;
+  border: none;
   background-color: #cbbfae;
+  color: #5b5a4f;
+  font-family: 'Silkscreen', cursive;
 }
-.soundslip-belongs{
-  font-size: 1em;
-  color:rgb(225, 165, 206);
+.edit-form > label > textarea{
+  height: 5em;
 }
-.soundslip-title{
-  font-size: 1.2em;
-  font-family: 'Questrial', sans-serif;
+.edit-submit{
+  color: #cbbfae;
+  background-color: #5b5a4f;
+  height: 5vh;
+  width: 30%;
+  border-radius: 5px;
+  margin-top: 4em;
+  font-family: 'Silkscreen', cursive;
 }
-.soundslip-desc{
-  font-family: 'Questrial', sans-serif;
-  font-size: 0.8em;
+.edit-public{
 }
-.soundslip-date{
-  font-size: 0.8em;
+/* LIB PLAYER */
+.fa-pause{
+  font-size: 2rem;
+}
+.fa-play{
+  font-size: 2rem;
+}
+
+
+
+/* UPLOAD PAGE */
+.upload{
+  width: 100%;
 }
 .upload-container{
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 90vh;
+  width: 100%;
+  font-family: 'Silkscreen', cursive;
+  color:#c6c5b6;
 }
 .create-new{
   display: flex;
   flex-direction: column;
+  width: 60%;
 }
-.audio-player{
-  width: 10px;
+.create-new > label{
+  text-align: center;
+  margin: 1.4em 0;
 }
-.upload-container{
-  font-family: 'Questrial', sans-serif;
-  color:rgb(225, 165, 206)
+.file-upload{
+  height: 6vh;
+  width: 30%;
+  margin: auto;
+  padding: 1% 0;
+  /* SEE THE BOOKMARKED THING ON STYLING FILE INPUTS */
 }
-.create-new{
-  width: 50%;
-}
-.create-new > input{
-  
+.file-upload-text{
+  text-align: center;
 }
 .upload-text{
-  background-color: rgb(225, 165, 206);
+  background-color:#c6c5b6;
   border: none;
   border-radius: 5px;
-  margin: 1rem 0;
-  height: 2.5rem;
+  margin: 0 auto;
+  width: 75%;
+  height: 6vh;
+  font-family: 'Silkscreen', sans-serif;
+  font-size: 1.2em;
+  padding-left: 1em;
+}
+.upload-text:only-of-type{
+  height: 11vh;
+  padding: 1vh;
+}
+.upload-checkbox{
+  margin: 1vh 0 4vh 0;
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  /* needs custom styling also */
+}
+.upload-button{
+  margin: auto;
+  height: 6vh;
+  width: 30%;
+  background-color: #c6c5b6;
+  border-radius: 5px;
+  font-family: 'Silkscreen', sans-serif
+}
+
+/* CLERK STUFF */
+
+.cl-userButtonAvatarBox{
+  width: 3rem;
+  height: 3rem;
+}
+
+/* ICONS ETC */
+.download{
+  border: solid green 1px;
+}
+.download i{
+  font-size: 2rem;
+  border: solid blue 1px;
 }
